refactor methods in InMemoryOfferRepositoryTestImpl